# terraffi

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
terraffi_ctypes/: Cargo.toml
terraffi_ctypes/src/: arrays.rs  lib.rs  ptr.rs  slice.rs  strings.rs  vec.rs
terraffi_gen/: Cargo.toml
terraffi_gen/src/: doc.rs  items.rs  lib.rs
terraffi_gen/tests/: expected_header.h  expected_header_comment.h  expected_header_export_macro.h  expected_header_pascal.h  expected_header_prefixed.h  export_test.rs
terraffi_helpers/: Cargo.toml
terraffi_helpers/src/: lib.rs
terraffi_macro/: Cargo.toml
terraffi_macro/src/: lib.rs
terraffi_testdeplib/: Cargo.toml
terraffi_testdeplib/src/: lib.rs
terraffi_testlib/: Cargo.toml  build.rs
terraffi_testlib/src/: example_structure.rs  lib.rs  point.rs
