[package]
name = "terraffi_gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
[dev-dependencies]
tempfile = "3"
